--- a/main/templates/login/register.html
+++ b/main/templates/login/register.html
@@ -47,7 +47,7 @@
         </div>
 
             <div class="join_area">
-                <form id="register_form" method="post" action="register">
+                <form id="register_form" method="post" action="/register/">
                     {% csrf_token %}
                     <div class="accountInfo">
                         <h2>계정 정보</h2>
